<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Copyright (c) 2011-2013, Qualcomm Technologies, Inc.
  All Rights Reserved.
  Qualcomm Technologies Confidential and Proprietary.
  -->
  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/layout_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="8"
        android:paddingRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="@dimen/path_height" android:background="#333333">
        <ImageButton android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:id="@+id/btn_sdcard"
            android:visibility="gone"
            android:background="@drawable/icon_sd">
        </ImageButton>
        <HorizontalScrollView
             android:layout_height="match_parent"
             android:layout_width="250dp"
             android:scrollbars="none"
			 android:background="#f5f5f5"
             android:layout_weight="7"
             android:layout_marginRight="3dp"
             android:layout_marginLeft="10dp"
          >

        <TextView
            android:id="@+id/tv_path"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hello"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:textColor="#242424"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:layout_marginRight="3dp"
            android:focusable="true"
            android:freezesText="true">
        </TextView>
        </HorizontalScrollView>
        <View
           android:id="@+id/space"
           android:layout_width="2dp"
           android:layout_height="fill_parent"
           android:background="#666666"
           android:layout_marginRight="0dp"/>
        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:paddingRight="3dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_up">
        </ImageButton>

</LinearLayout>
        <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
     />
     </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:weightSum="2"
        android:minHeight="?android:attr/listPreferredItemHeight" 
        android:background="#000000"
        style="?android:attr/buttonStyle"
    >
        <Button android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"/>
        <Button android:id="@+id/btn_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok"/>
    </LinearLayout>
</FrameLayout>
