<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Copyright (c) 2011-2013, Qualcomm Technologies, Inc.
  All Rights Reserved.
  Qualcomm Technologies Confidential and Proprietary.
  -->
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/path_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#f5f5f5"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/tv_path"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hello"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/space"
            android:textColor="#242424"
            android:textSize="14sp"
            android:singleLine="true"
            android:focusable="false"
            android:layout_marginRight="3dp"
            android:ellipsize="middle"
            android:freezesText="true">
        </TextView>
        <View
           android:id="@id/space"
           android:layout_width="1dp"
           android:layout_height="30dp"
           android:layout_centerVertical="true"
           android:background="#484848"
           android:layout_toLeftOf="@+id/btn_up"
           android:layout_marginRight="6dp"/>

        <ImageButton
            android:id="@id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@*android:drawable/tab_indicator_ab_holo"
            android:src="@drawable/icon_up" >

        </ImageButton>

    </RelativeLayout>
    <ListView android:id="@android:id/list"
        android:divider="#e1e1e1"        
		android:dividerHeight="1px"  
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layout_top"
        android:layout_above="@+id/layout_bottom"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:footerDividersEnabled="true"
     />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/layout_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:minHeight="?android:attr/listPreferredItemHeight" 
        style="?android:attr/buttonStyle"
        android:focusable="false"
    >
        <Button android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/btn_cancel"/>
        <Button android:id="@+id/btn_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/btn_paste"/>
    </LinearLayout>
</RelativeLayout>
